...
    func setupScrollView() {

        scrollView.frame =
            view.bounds

        scrollView.accessibilityIdentifier =
            "visualAIPlaygroundScrollView"

        view.addSubview(scrollView)

        contentView.frame =
            CGRect(
                x: 0,
...
            .roundedRect

        strictInput.text =
            "Initial Strict Validation Text"

        strictInput.accessibilityIdentifier =
            "strictMatchInput"

        strictInput.returnKeyType =
            .done

        strictInput.delegate =
            self
...
